making my-trips and my-profile prettier

--- a/car-app/src/app/components/my-profile/my-profile.component.html
+++ b/car-app/src/app/components/my-profile/my-profile.component.html
@@ -9,7 +9,8 @@
     <li class = "list-group-item">
       Email: {{user.email}}
     </li>
+    <hr class="my-4">
     <app-messages></app-messages>
   </ul>
-  <br><br><br><br><br><br><br><button class="btn btn-danger" (click)="deleteUserProfile()">Delete this profile</button>
+  <button class="btn btn-danger" (click)="deleteUserProfile()">Delete this profile</button>
 </div>
