--- a/car-app/src/app/components/my-trips/my-trips.component.css
+++ b/car-app/src/app/components/my-trips/my-trips.component.css
@@ -7,8 +7,8 @@
     flex-direction: row;
     margin: auto;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 .aResult {
     padding: 2em;
-
 }
