Moved all trip-handler services to firebase

--- a/car-app/src/app/components/notification/notification.component.html
+++ b/car-app/src/app/components/notification/notification.component.html
@@ -1,3 +1,6 @@
 <div *ngIf="type=='madeTrip'">
   You just made a trip.
-</div>>
+</div>
+<div *ngIf="type=='userJoinedTrip'">
+  {{data.displayName}} just joined your trip.
+</div>
