--- a/car-app/src/app/components/my-trips/my-trips.component.html
+++ b/car-app/src/app/components/my-trips/my-trips.component.html
@@ -7,7 +7,8 @@
       <div class="aResult" *ngFor="let result of myTripsPassenger">
         <div class="card border-success mb-3">
           <div class="card-header">
-            <h5 class="card-title">{{result.from}} -> {{result.to}}</h5>
+            <h5 class="card-title">{{result.from}} -> {{result.to}} </h5>
+            <p>Date: {{result.date}}</p>
           </div>
           <div class="card-body">
               
@@ -15,6 +16,7 @@
         </div>
       </div>
     </div>
+   
     <div>
       <h2>Driving</h2>
 
@@ -24,7 +26,7 @@
             <h5 class="card-title">{{result.from}} -> {{result.to}}</h5>
           </div>
           <div class="card-body">
-              <button (click)="deleteTrip(result._id)">Delete</button>
+              <button (click)="deleteTrip(result.$key)">Delete</button>
           </div>
         </div>
       </div>
