--- a/car-app/src/app/components/login-chat/login-chat.component.html
+++ b/car-app/src/app/components/login-chat/login-chat.component.html
@@ -6,13 +6,13 @@
           [(ngModel)]="email"
           type="email" 
           name="email" 
-          class="formInput" />
+          class="form-control" />
     </div>
     <div class="form-group">
         <input type="password" 
         [(ngModel)]="password"
         name="password" 
-        class="formInput" />
+        class="form-control" />
     </div>
     <input type="submit" class="btn btn-primary" value="Login">
   </form>
