--- a/car-app/src/app/components/signup-form-chat/signup-form-chat.component.html
+++ b/car-app/src/app/components/signup-form-chat/signup-form-chat.component.html
@@ -1,34 +1,22 @@
-<div class="container">
-    <div class="signUpCard">
-     <form #signupForm="ngForm">
-      <h2 class="heading">Sign Up</h2>
-  
+
+<div id="registerForm" class="jumbotron">
+  <h2 class="page-header">Register</h2>
+  <form (submit)="signUp()">
+    <div class="form-group">
       <label class="label">Email</label>
-         <input 
-         type="email" name="email"
-         placeholder="Enter your email address" 
-         [(ngModel)]="email" class="formInput"
-         maxlength="60" required/>
-  
-      <label class="label">Password</label>
-        <input 
-          type="password" name="password"
-          placeholder="Choose a password" 
-          [(ngModel)]="password" class="formInput" 
-          required/>
-  
-      <label class="label">Display Name</label>
-        <input 
-          name="displayName"
-          placeholder="Enter a display name" 
-          [(ngModel)]="displayName" class="formInput"
-          maxlength="12" required/>
-  
-        <button [disabled]="!signupForm.form.valid" 
-                type="submit" (click)="signUp()"
-                class="btn" id="btn-signUp">
-                Sign Up
-        </button>
-      </form>
+      <input type="email" name="email" placeholder="Enter your email address" [(ngModel)]="email" class="form-control" maxlength="60"
+        required/>
     </div>
-  </div>
+    <div class="form-group">
+      <label class="label">Display Name</label>
+      <input name="displayName" placeholder="Enter a display name" [(ngModel)]="displayName" class="form-control" maxlength="12"
+        required/>
+
+    </div>
+    <div class="form-group">
+      <label class="label">Password</label>
+      <input type="password" name="password" placeholder="Choose a password" [(ngModel)]="password" class="form-control" required/>
+    </div>
+    <input type="submit" class="btn btn-primary" value="Submit">
+  </form>
+</div>
